// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data should match a snapshot with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Data
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Support
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see below for more resources.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Video
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Help
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-title"
          >
            Sharing Data
          </h1>
          <p
            class="el-has-grey-text el-body-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </p>
          <p
            class="el-has-grey-text el-body-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </p>
          <h2
            class="el-subtitle"
          >
            Available Data
          </h2>
          <div
            class="el-mb11 el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No datasets available for your organisation
            </div>
          </div>
          <h2
            class="el-subtitle"
          >
            Data Shares
          </h2>
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No data shares available for your organisation
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Data
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Support
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see below for more resources.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Video
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Help
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Sharing Data
        </h1>
        <p
          class="el-has-grey-text el-body-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </p>
        <p
          class="el-has-grey-text el-body-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </p>
        <h2
          class="el-subtitle"
        >
          Available Data
        </h2>
        <div
          class="el-mb11 el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No datasets available for your organisation
          </div>
        </div>
        <h2
          class="el-subtitle"
        >
          Data Shares
        </h2>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No data shares available for your organisation
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data should match a snapshot with no data and loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Data
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Support
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see below for more resources.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Video
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Help
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-title"
          >
            Sharing Data
          </h1>
          <p
            class="el-has-grey-text el-body-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </p>
          <p
            class="el-has-grey-text el-body-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </p>
          <h2
            class="el-subtitle"
          >
            Available Data
          </h2>
          <div
            class="el-loader-container"
          >
            <div
              class="el-mb11 el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
          <h2
            class="el-subtitle"
          >
            Data Shares
          </h2>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Data
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Support
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see below for more resources.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Video
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Help
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Sharing Data
        </h1>
        <p
          class="el-has-grey-text el-body-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </p>
        <p
          class="el-has-grey-text el-body-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </p>
        <h2
          class="el-subtitle"
        >
          Available Data
        </h2>
        <div
          class="el-loader-container"
        >
          <div
            class="el-mb11 el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
        <h2
          class="el-subtitle"
        >
          Data Shares
        </h2>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
